# porunga

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
porunga/: cli.py  llm.py
porunga-CLI/: cli.py  llm.py
porunga/utils/: parse_messages.py
porunga/utils/exceptions/: parse_error.py
